[package]
name = "rextio"
version = "0.0.1"
edition = "2021"
authors = ["Song Si-young <chunechew@gmail.com>"]
description = "The core engine for Rextio framework."
license = "MIT"
repository = "https://github.com/rextio/rextio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
